--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
     <main>
         <h2>Work Experience</h2>
         <ul>
-            <li>Software Developer at XYZ Company (2022-2024)</li>
+            <li>Software engineering student at KLEIT (2022-2024)</li>
         </ul>
         <h2>Education</h2>
         <ul>
